# LuaNativeObjects

./: .gitignore  COPYRIGHT  Makefile  README.md  TODO  TODO.md  native_objects.lua  native_objects.sh  record.lua  test.lua
.github/workflows/: main.yml
examples/: Makefile  bench.nobj.lua  gd.nobj.lua  gdImage.lua  gdImage.nobj.lua  gd_api.lua  run_bench.lua  test_gd.lua
examples/bench/: callback.nobj.lua  method_call.nobj.lua  no_wrap_callback.nobj.lua  wrapped_callback.nobj.lua
lua/native_objects/: gen_dump.lua  gen_lua.lua
native_objects/: gen_dotfile.lua  gen_lua.lua  gen_lua_ffi.lua  gen_luadoc.lua  gen_simple.lua  gen_swig.lua  interfaces.lua  lang_lua.lua  lang_swig.lua  stages.lua
project_template/: CMakeLists.txt  PROJECT_README.md  README.regenerate.md  RUN_THIS_FIRST.lua  __mod_name__.nobj.lua  lua-__mod_name__-scm-0.rockspec
project_template/cmake/: LuaNativeObjects.cmake
project_template/src/: object.nobj.lua
rockspecs/: LuaNativeObjects-0.5-0.rockspec  LuaNativeObjects-scm-0.rockspec  luanativeobjects-0.5-0.rockspec  luanativeobjects-0.5-1.rockspec  luanativeobjects-0.5-2.rockspec  luanativeobjects-luadoc-0.5-0.rockspec  luanativeobjects-luadoc-scm-0.rockspec  luanativeobjects-scm-0.rockspec
